added logo image

--- a/inex.html
+++ b/inex.html
@@ -15,7 +15,11 @@
                         <!--HEADER-->
     <header class="header-container">
         <nav class="nav-bar">
-            <div class="col-logo"></div>
+            <div class="col-logo ">
+                <div class="card-logo flex">
+                    <img id="logo-image"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNGE5vreTJdvlpXZ2SyMjEPQvm_ASpCpJXqw&usqp=CAU" alt="">
+                </div>
+            </div>
             <div class="col-link"></div>
             <div class="col-logo"></div>
         </nav>
