added class container

--- a/inex.html
+++ b/inex.html
@@ -13,15 +13,17 @@
 </head>
 <body>
                         <!--HEADER-->
-    <header class="header-container">
-        <nav class="nav-bar">
-            <div class="col-logo ">
-                <div class="card-logo flex">
-                    <img id="logo-image"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNGE5vreTJdvlpXZ2SyMjEPQvm_ASpCpJXqw&usqp=CAU" alt="">
-                </div>
+    <header>
+        <nav class="nav-bar container">
+            <img class="col-logo" src="img/logo.svg" alt="">
+            <div class="col-link border">
+                <span>Scarica</span>
+                <span>Perchè discord</span>
+                <span>Nitro</span>
+                <span>Sicurezza</span>
+                <span>Assistenza</span>
             </div>
-            <div class="col-link"></div>
-            <div class="col-logo"></div>
+            <div class="col-action border">magin</div>
         </nav>
     </header>
     <div class="jumbotron">
