navbar compleate started jumbotron

--- a/inex.html
+++ b/inex.html
@@ -16,19 +16,23 @@
     <header>
         <nav class="nav-bar container">
             <img class="col-logo" src="img/logo.svg" alt="">
-            <div class="col-link border">
-                <span>Scarica</span>
-                <span>Perchè discord</span>
-                <span>Nitro</span>
-                <span>Sicurezza</span>
-                <span>Assistenza</span>
+            <div class="col-link">
+                <span class="white">Scarica</span>
+                <span class="white">Perchè discord</span>
+                <span class="white">Nitro</span>
+                <span class="white">Sicurezza</span>
+                <span class="white">Assistenza</span>
             </div>
-            <div class="col-action border">magin</div>
+            <div class="col-action button-bg">Accedi</div>
         </nav>
+    
+        <div class="jumbotron">
+            <div class="jumbotron-item">
+                <h1 class="title white">Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer,comunità artistica</p>
+            </div>
+        </div>
     </header>
-    <div class="jumbotron">
-        <div class="jumbotron-item"></div>
-    </div>
                         <!--MAIN-->
     <main>             <!--PRIMA SEZIONE-->
         <section class="section-container">
