--- a/inex.html
+++ b/inex.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Giordano Guidi">
     <meta name="keywords" content="Discord">
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNGE5vreTJdvlpXZ2SyMjEPQvm_ASpCpJXqw&usqp=CAU">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Stylesheet-->
     <link rel="stylesheet" href="CSS/style.css">
@@ -29,7 +30,14 @@
         <div class="jumbotron">
             <div class="jumbotron-item">
                 <h1 class="title white">Il tuo posto per parlare</h1>
-                <p>Che tu faccia parte di un club scolastico, gruppo di gamer,comunità artistica</p>
+                <p class="white">Che tu faccia parte di un club scolastico, gruppo di gamer,comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="down-login-bar">
+                    <div class="download button-bg"><i class="fa-solid fa-arrow-down fa-bounce"></i>Scarica per Mac</div>
+                    <div class="login white button-bg">Apri Discord nel tuo browser</div>
+
+                </div>
+
+
             </div>
         </div>
     </header>
