started first section

--- a/inex.html
+++ b/inex.html
@@ -43,29 +43,35 @@
     </header>
                         <!--MAIN-->
     <main>             <!--PRIMA SEZIONE-->
-        <section class="section-container">
-            <div class="main-items-container">
-                <div class="col-blue"></div>
-                <div class="col-pink"></div>
+        <section class="bg-white">
+            <div class="container flex h-100">
+                <div class="col-blue">
+                    <img src="img/item1.svg" alt="" class="study-group">
+                </div>
+                <div class="col-pink">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                </div>
             </div>
         </section>
                             <!--SECONDA SEZIONE-->
-        <section class="section-container gray">
-            <div class="main-items-container ">
+        <section class="section bg-gray">
+            <div class="container flex h-100 ">
                 <div class="col-pink"></div>
                 <div class="col-blue"></div>
             </div>
         </section>
                             <!--TERZA SEZIONE-->
-        <section class="section-container">
-            <div class="main-items-container">
+        <section class="bg-white">
+            <div class="container flex h-100">
                 <div class="col-blue"></div>
                 <div class="col-pink"></div>
             </div>
         </section>
                             <!--QUARTA SEZIONE-->
-        <section class="container-big-gray">
-            <div class="col-green-big"></div>
+        <section class="big bg-gray">
+            <div class="container flex h-100">
+                <div class="big-col"></div>
+            </div>
         </section>
                             <!--FOOTER-->
 
