--- a/inex.html
+++ b/inex.html
@@ -50,6 +50,7 @@
                 </div>
                 <div class="col-pink">
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
             </div>
         </section>
