--- a/index.html
+++ b/index.html
@@ -57,21 +57,39 @@
                             <!--SECONDA SEZIONE-->
         <section class="section bg-gray">
             <div class="container flex h-100 ">
-                <div class="col-pink"></div>
-                <div class="col-blue"></div>
+                <div class="col-pink">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo.Gli amici nel tuo server possono vedere che se lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="col-blue">
+                    <img src="img/item2.svg" alt="">
+                </div>
             </div>
         </section>
                             <!--TERZA SEZIONE-->
         <section class="bg-white">
             <div class="container flex h-100">
-                <div class="col-blue"></div>
-                <div class="col-pink"></div>
+                <div class="col-blue">
+                    <img src="img/item3.svg" alt="">
+                </div>
+                <div class="col-pink">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio ad una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile.Concedi ai membri poteri speciali, crea canali privati e molto altro </p>
+                </div>
             </div>
         </section>
                             <!--QUARTA SEZIONE-->
         <section class="big bg-gray">
-            <div class="container flex h-100">
-                <div class="big-col"></div>
+            <div class="container centered">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza.Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="img/item4-big.svg" alt="">
+                <div class="bg-stars flex">
+                    <h3>Pronto ad iniziare la tua nuova avventura?</h3>
+                </div>
+                <div class=" button container flex">
+                    <div class="violet button-bg"><i class="fa-solid fa-arrow-down fa-bounce"></i>Scarica per Mac</div>
+                </div>  
             </div>
         </section>
                             <!--FOOTER-->
