modified footer added icon

--- a/index.html
+++ b/index.html
@@ -93,27 +93,41 @@
             </div>
         </section>
                             <!--FOOTER-->
-
         <footer>
                             <!--INFO FOOTER-->           
-            <section class="info-footer section-container">
-                <div class="footer main-items-container">
-                    <div class="col-30w"></div>
+            <div class="container">
+                <div class="footer-top flex">
+                    <div class="col-30w">
+                        <h3 class="c-violet">Il tuo posto per parlare</h3>
+                        <div class="language flex">
+                            <img src="img/ita.png" alt="" class="flag-ita">
+                            <span>Italiano</span><i class="fa-solid fa-angle-down fa-beat"></i>
+                        </div>
+                        <div class="social-media flex">
+                            <i class="fa-brands fa-twitter fa-flip"></i>
+                            <i class="fa-brands fa-instagram fa-flip"></i>
+                            <i class="fa-brands fa-youtube fa-flip"></i>
+                            <i class="fa-brands fa-facebook fa-flip"></i>
+                        </div>
+                    </div>
                     <div class="col-70w">
-                        <div class="col-25perc"></div>
-                        <div class="col-25perc"></div>
-                        <div class="col-25perc"></div>
-                        <div class="col-25perc"></div>
+                        <div class="footer-nav">
+                            <div class="col-25perc"></div>
+                            <div class="col-25perc"></div>
+                            <div class="col-25perc"></div>
+                            <div class="col-25perc"></div>
+                        </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        
                             <!--CONNECTION FOOTER-->      
-             <section class="connections">
+             <div class="footer-bottom">
                 <div class="input-bar">
                     <div class="card-logo" >Logo</div>
                     <div class="card-button">Bottone</div>
                 </div>
-             </section>
+            </div>
         </footer>
     </main>
 </body>
