--- a/index.html
+++ b/index.html
@@ -112,10 +112,46 @@
                     </div>
                     <div class="col-70w">
                         <div class="footer-nav">
-                            <div class="col-25perc"></div>
-                            <div class="col-25perc"></div>
-                            <div class="col-25perc"></div>
-                            <div class="col-25perc"></div>
+                            <div class="col-25perc flex column">
+                                <h4 class="c-violet">Prodotto</h4>
+                                <a href="">Scarica</a>
+                                <a href="">Perchè Discord</a>
+                                <a href="">Nitro</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Assistenza</a>
+
+                            </div>
+                            <div class="col-25perc flex column">
+                                <h4 class="c-violet">Prodotto</h4>
+                                <a href="">Scarica</a>
+                                <a href="">Perchè Discord</a>
+                                <a href="">Nitro</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Assistenza</a>
+                            </div>
+                            <div class="col-25perc flex column">
+                                <h4 class="c-violet">Prodotto</h4>
+                                <a href="">Scarica</a>
+                                <a href="">Perchè Discord</a>
+                                <a href="">Nitro</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Assistenza</a>
+                                <a href="">Scarica</a>
+                                <a href="">Perchè Discord</a>
+                                <a href="">Nitro</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Assistenza</a>
+                                <a href="">Assistenza</a>
+                            </div>
+                            <div class="col-25perc flex column">
+                                <h4 class="c-violet">Norme</h4>
+                                <a href="">Scarica</a>
+                                <a href="">Perchè Discord</a>
+                                <a href="">Nitro</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Assistenza</a>
+
+                            </div>
                         </div>
                     </div>
                 </div>
